<resources>
    <string name="app_name">智慧社区</string>
    <!--登录-->
    <string name="login_forget_pass">忘记密码</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="count_down_timer_reset_code_format">%1$d 秒</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>

    <string name="reset_password">重置密码</string>
    <string name="hint_input_code">请输入手机验证码</string>
    <string name="hint_input_name">请输入用户名</string>
    <string name="reset_code">发送验证码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_input_confirm_new_password">请再次输入新密码</string>
    <string name="opt_confirm">确定</string>
    <string name="text_network_error">网络链接错误</string>
    <string name="text_server_error">服务器返回数据错误</string>

    <string name="home_title">智慧社区</string>
    <string name="nav_home">主页</string>
    <string name="nav_shop">店铺</string>
    <string name="nav_order">订单</string>
    <string name="nav_person">我的</string>
    <!--店铺-->
    <string name="work_time">营业时间：%s</string>
    <string name="shipment">运费: ￥%s</string>
    <string name="recommend">商品推荐</string>
    <string name="sign">￥</string>
    <string name="edit_hint">请输入要寻找的内容</string>
    <!--订单-->
    <string name="order_id">订单号：</string>
    <string name="no_order_record">暂时没有订单</string>
    <string name="status_finished">已完成</string>
    <string name="status_sending">配送中</string>
    <string name="status_wait_pay">待付款</string>
    <string name="my_order">我的订单</string>
    <string name="order_detail">订单详情</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <!--个人中心-->
    <string name="title_address">收货地址</string>
    <string name="empty_address_hint">暂无收货地址，请点击添加按钮添加</string>
    <string name="title_add_address">添加收货地址</string>
    <string name="save">保存</string>
    <string name="text_men">先生</string>
    <string name="text_woman">女士</string>
    <string name="name">姓名：</string>
    <string name="phone">手机：</string>
    <string name="edit_address">修改地址</string>
    <string name="detail_address">详细地址：</string>
    <string name="address">收货地址：</string>
    <string name="hint_chose_area">请选择小区</string>
    <string name="address_manager">地址管理</string>
    <string name="feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="service">客服</string>
    <string name="name_hint">请输入姓名</string>
    <string name="phont_hint">配送人员联系您的手机号</string>
    <string name="address_hint">输入门牌号等详细地址</string>
    <string name="submit">提交</string>
    <string name="max_init">0/100</string>
    <string name="max_init_50">0/50</string>
    <string name="feedback_hint">我们非常重视您给我们提出的宝贵建议，帮助我们不断完善产品，谢谢！</string>
    <string name="set_share">分享给好友</string>
    <string name="set_cache">清空缓存</string>
    <string name="set_about">关于智慧社区</string>
    <string name="set_update">版本更新</string>
    <string name="exit">退出</string>
    <string name="set_exit">退出当前账号</string>
    <string name="title_edit">修改个人资料</string>
    <string name="user_name">用户名</string>
    <string name="signature">个性签名</string>
    <string name="district">小区</string>
    <string name="sex">性别</string>
    <string name="men">男</string>
    <string name="woman">女</string>
    <string name="edit_user_name">修改用户名</string>
    <string name="edit_signature">修改个性签名</string>
    <string name="sure">确定</string>
    <string name="hint_signature">填写个性签名</string>
    <string name="opt_take_photo">拍照</string>
    <string name="opt_select_from_album">从手机相册中选择</string>
    <string name="opt_cancel">取消</string>
    <string name="edit_max">%1$d/%2$d</string>
    <string name="please_edit_feedback">请填写反馈建议</string>
    <string name="please_edit_signature">请填写个性签名</string>
    <string name="attach_seller">联系商家</string>
    <string name="title_shipment">配送费</string>
    <string name="order_status">订单状态</string>
    <string name="order_time">下单时间</string>
    <string name="order_receive">收货人</string>
    <string name="contact_phone">联系电话</string>
    <string name="sign_price">￥%1$s</string>
    <string name="sign_number">%1$d份</string>
    <string name="plus_number">×%1$d</string>
    <string name="title_order_id">订单号</string>
    <string name="remark">备注</string>
    <string name="already_sale">已售：%1$d</string>
    <string name="standard">规格：%1$s</string>
    <string name="all_goods">全部商品</string>
    <string name="no_shipment">(不包含运费)</string>
    <string name="shipment_fee">(运费：%s)</string>
    <string name="make_sure">确认下单</string>
    <string name="shop_info">店铺简介</string>
    <string name="goods_detail">商品详情</string>
    <string name="remain">剩余：%s</string>
    <string name="no_enough_remain">库存不足</string>
    <string name="title_shop_cart">购物车</string>
    <string name="pay_right">立即结算</string>
    <string name="empty_cart">购物车空空哦</string>
    <string name="to_select">去挑挑看</string>
    <string name="delete_address">删除地址</string>
    <string name="delete">删除</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_district">请选择小区</string>
    <string name="please_input_address">请输入详细地址</string>
    <string name="wheather_delete_address">确定删除地址?</string>
    <string name="wheather_return_goods">确定退货？</string>
    <string name="wheather_clear_cart">是否清空购物车？</string>
    <string name="to_pay">去支付</string>
    <string name="total">总计</string>
    <string name="make_order">确认订单</string>
    <string name="money">商品金额</string>
    <string name="please_add_address">暂无收货地址，请点击添加！</string>
    <string name="add_address">请添加收货地址！</string>
    <string name="edit_remark">填写备注</string>
    <string name="edit_hint_remark">请输入备注信息</string>
    <string name="submit_order">提交订单</string>
    <string name="status_submit">已提交</string>
    <string name="no_data">暂时没有数据</string>
    <string name="no_network">当前无网络连接，请检查网络</string>
    <string name="food">美味食物</string>
    <string name="fruit">新鲜水果</string>
    <string name="drink">鲜奶饮品</string>
    <string name="flower">鲜花配送</string>
    <string name="save_area">优惠专区</string>
    <string name="recommend_to">为你推荐</string>
    <string name="opt_pull">下拉即可刷新</string>
    <string name="tag_refresh">下拉即可刷新</string>
    <string name="tag_release">释放即可刷新</string>
    <string name="tag_loading">努力加载中...</string>
    <string name="clear">清空</string>
    <string name="init_money">￥00.00</string>
    <string name="message">公告</string>
    <string name="title_tips">提示</string>
    <string name="exit_messgae">您是否确定退出登录？</string>
    <string name="password_length_error">密码长度小于6位或大于12位</string>
    <string name="password_error_format">密码格式有误,请输入字母和数字密码</string>
    <string name="please_enter_new_pass">请输入新密码</string>
    <string name="enter_error_password">两次输入的密码不一致</string>
    <string name="new_recommend">新品推荐</string>
    <string name="second_kill">秒杀产品</string>
    <string name="no_goods">暂时没有商品</string>
    <string name="normal_goods">普通商品</string>
    <string name="discount_goods">折扣商品</string>
    <string name="status_return">退款</string>
    <string name="phone_error">电话号码错误</string>
    <string name="share_qq">腾讯QQ</string>
    <string name="qq_qzone">QQ空间</string>
    <string name="share_success">分享成功</string>
    <string name="share_error">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="about">关于智慧社区</string>
    <string name="about_app">智慧社区是社区管理的一种新理念，是新形势下社会管理创新的一种新模式。社区作为城市居民生存和发展的载体，其智慧化是城市智慧水平的集中体现。本平台充分利用移动互联网技术，以社区居民为服务核心，提供智慧社区的商品直销平台，改变了传统的销售和购买方式，从根本上提高了社区居民的生活质量，为其提供一个安全、舒适、便利的现代化、智慧化生活环境。</string>
    <string name="share">分享</string>

</resources>
