<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp">

    <TextView
        style="@style/MyTextView"
        android:id="@+id/take_a_picture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_btn_dialog"
        android:text="@string/opt_take_photo" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/icon_horizontal_line" />

    <TextView
        style="@style/MyTextView"
        android:id="@+id/select_from_album"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_bomb_b_selector"
        android:text="@string/opt_select_from_album" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="8dp"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        style="@style/MyTextView"
        android:id="@+id/opt_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bomb_selector"
        android:text="@string/opt_cancel" />

</LinearLayout>