<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_background_color"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        style="@style/Widget.Design.Admin.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.com.wisdomcommunity.view.CompatStatusBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_back" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.Widget.Design.Admin.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_signature" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_leave_frame_full_b"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="12dp"
        android:paddingTop="9dp">

        <EditText
            android:id="@+id/edit_signature"
            style="@style/Widget.Design.EditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_signature" />

        <TextView
            android:id="@+id/txt_sick_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/max_init"
            android:textColor="@color/color_bbb"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/sure"
        style="@style/Widget.Design.Admin.Login.Confirm.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="33dp"
        android:enabled="false"
        android:text="@string/sure" />


</LinearLayout>