<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_background_color"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        style="@style/Widget.Design.Admin.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.com.wisdomcommunity.view.CompatStatusBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_back" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.Widget.Design.Admin.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_user_name" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/user_name"
        style="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:maxLength="10"
        android:text="你是上司是生死的等对等的等对"
        android:textSize="17sp" />

    <TextView
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:text="用户名为4-10个字符" />

    <TextView
        android:id="@+id/sure"
        style="@style/Widget.Design.Admin.Login.Confirm.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="33dp"
        android:enabled="false"
        android:text="@string/sure" />


</LinearLayout>