<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_background_color"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        style="@style/Widget.Design.Admin.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.com.wisdomcommunity.view.CompatStatusBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.Widget.Design.Admin.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/buy_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/total"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/total"
            android:text="@string/sign"
            android:textColor="@color/color_ffff4444"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/sign"
            android:text="89"
            android:textColor="@color/color_ffff4444"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/buy"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_blue_selector"
            android:gravity="center"
            android:text="@string/to_pay"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>