<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            style="@style/Widget.Design.Admin.AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/palette_transparent">

            <com.example.com.wisdomcommunity.view.CompatStatusBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="43dp"
                    android:src="@mipmap/community" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:layout_marginRight="33dp"
                    android:layout_marginTop="58dp">

                    <EditText
                        android:id="@+id/text_input_phone"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_phone"
                        android:drawablePadding="14dp"
                        android:drawableStart="@drawable/icon_phone"
                        android:hint="@string/hint_input_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="11" />


                    <ImageButton
                        android:id="@+id/text_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="4dp"
                        android:background="@color/transparent"
                        android:minHeight="40dp"
                        android:minWidth="40dp"
                        android:scaleType="center"
                        android:src="@drawable/icon_text_clear_selector" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:layout_marginRight="33dp"
                    android:layout_marginTop="22dp">

                    <EditText
                        android:id="@+id/text_input_password"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_pwd"
                        android:drawablePadding="14dp"
                        android:drawableStart="@drawable/icon_pwd"
                        android:hint="@string/hint_input_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                    <android.support.design.widget.CheckableImageButton
                        android:id="@+id/password_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="4dp"
                        android:background="@color/palette_transparent"
                        android:minHeight="40dp"
                        android:minWidth="40dp"
                        android:src="@drawable/icon_visible_selector" />

                </FrameLayout>

                <TextView
                    android:id="@+id/login"
                    style="@style/Widget.Design.Admin.Login.Confirm.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:layout_marginRight="33dp"
                    android:layout_marginTop="33dp"
                    android:enabled="false"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/login_forget_pass"
                    android:textColor="@color/palette_primary_color" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
